# holoocean-ros

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md
config/: ros_params.yaml  torpedo_3fin.json  torpedo_fossen.json  torpedo_non_fossen.json
docker/: Dockerfile  README.md  build_container.sh  docker-compose.yaml
holoocean_main/: package.xml  setup.cfg  setup.py
holoocean_main/config/: blueROV.json  config.yaml  cougUV.json  multi_agent.json  ros_params.yaml  scenario.json  surface_vessel.json  surface_vessel_waypoint.json  torpedo_fossen.json  usv_auv.json
holoocean_main/holoocean_main/: HSD_torpedo_interface.py  RK45_state_est.py  command_node.py  controller_gpt.py  controller_node.py  fins_node.py  holoocean_interface.py  holoocean_node.py  interface.py  moos_fins_node.py  multi_agents_node.py  multi_auv_node.py  multi_waypoint_navigator.py  sensor_data_encode.py  sv_waypoint_navigator.py  torpedo_node.py  vehicle_interface_node.py  waypoint_follower_node.py
holoocean_main/holoocean_main/interface/: holoocean_interface.py  sensor_data_encode.py
holoocean_main/launch/: holoocean_demo_launch.py  holoocean_fins_control_launch.py  holoocean_full_launch.py  holoocean_hardware_launch.py  holoocean_json_launch.py  holoocean_launch.py  holoocean_moos_hardware_launch.py  holoocean_torpedo_launch.py  holoocean_yaml_launch.py  multi_agent_sim_launch.py  multi_auv_launch.py  multi_waypoint_navigator_launch.py  sv_waypoint_navigator_launch.py  vehicle_interface_launch.py  waypoint_follower_node_launch.py
holoocean_main/scripts/: interface.py  yaml_to_json.py
(+65 files in other folders)
